--- a/omod/src/main/resources/apps/refapp_registrationapp_app.json
+++ b/omod/src/main/resources/apps/refapp_registrationapp_app.json
@@ -20,6 +20,21 @@
       "afterCreatedUrl": "/kenyaemr/clinician/clinicianViewPatient.page?patientId={{patientId}}",
       "sections": [
         {
+          "questions": [{
+            "legend": "Alias",
+            "id": "aliasLabel",
+            "fields": [{
+              "type": "personAttribute",
+              "formFieldName": "alias",
+              "uuid": "aec1b592-1d8a-11e9-ab14-d663bd873d93",
+              "widget": {
+                "providerName": "uicommons",
+                "fragmentId": "field/text"
+              }
+            }]
+          }]
+        },
+        {
           "id": "contactInfo",
           "label": "registrationapp.patient.contactInfo.label",
           "questions": [
